--- a/Version 2.0/css/base.css
+++ b/Version 2.0/css/base.css
@@ -1,3 +1,14 @@
+/***
+*
+* Title: Main CSS 
+* Author: Francis Baker 
+*
+* All rights reserved to Francis Baker. 
+* This repo can be found: https://github.com/Baker/HSIMP
+* 
+***/
+
+
 /* cyrillic-ext */
 @font-face {
   font-family: 'Open Sans';
