--- a/Version 2.0/css/main.css
+++ b/Version 2.0/css/main.css
@@ -50,7 +50,14 @@ iframe {
     text-align: center;
     
 }
-
+.github-commit {
+    padding:14px 0;
+    height:64px;
+    line-height:36px;
+    background-color:#5c5757;
+    color:#e6e6e6;
+    font-size:.9rem
+}
 
 .post-header {
   width: 100%;
