--- a/Version 2.0/css/main.css
+++ b/Version 2.0/css/main.css
@@ -8,26 +8,8 @@
 * 
 ***/
 
-
-/* Materialize CSS */
-.z-depth-1 {
-   padding-left: 15px;
-   padding-right: 15px;
-}
-
-
-/* Main content */
 body {
-    padding-left: 25px;
-}
-.intro h1 {
+    background: #222;
     font-size: 16px;
+    
 }
-.github-commit {
-    padding:14px 0;
-    height:64px;
-    line-height:36px;
-    background-color:#5c5757;
-    color:#e6e6e6;
-    font-size:.9rem
-} 
