--- a/Version 2.0/css/stylesheet.css
+++ b/Version 2.0/css/stylesheet.css
@@ -10,6 +10,15 @@
 
 body {
     background: #222;
-    font-size: 16px;
-    
+}
+
+h1 {
+    font-size: 22px;
+    color: #fff;
+    align-content: center;
+}
+
+.intro {
+}
+    width: 25%;
 }
