--- a/Version 2.0/css/stylesheet.css
+++ b/Version 2.0/css/stylesheet.css
@@ -9,33 +9,47 @@
 ***/
 
 body {
-    background: #222;
+    background-color: rgba(52, 73, 94,1.0);
 }
 
 h1 {
     font-size: 22px;
-    color: #fff;
+    color: rgba(236, 240, 241,1.0);
     text-align: center;
 }
 
+.row {
+    margin-top: 1.5em;
+    padding-bottom: 1.0em;
+    border: 1px rgba(236, 240, 241,.3) solid;
+    background-color: rgba(44, 62, 80,1.0);
+    border-radius: 15px;
+}
 .intro {
-    color: #777;
+    color: rgba(236, 240, 241,1.0);
 }
 .intro hr {
     width: 25%;
 }
 #warning {
-    color: red;
+    color: rgba(231, 76, 60,1.0);
     font-weight: 700;
     text-align: center!important;
 }
 #password-label {
     font-size: 14px;
+    color: rgba(236, 240, 241,1.0);
 }
 #password {
-    width: 40%;
-    color: white;
+    width: 60%;
+    color: rgba(236, 240, 241,1.0);
+}
+#password:hover {
+    color: rgba(236, 240, 241,1.0);
 }
 .footer {
-    color: #777;
+    color: rgba(236, 240, 241,1.0);
+}
+.footer span {
+    color: rgba(231, 76, 60,1.0);
 }
